feat: improve button component

--- a/work_phase_3/behavioural_design.html
+++ b/work_phase_3/behavioural_design.html
@@ -97,8 +97,29 @@
                 </div>
             </section>
 
+            <section class="base-card m-b-12">
+                <h3 class="m-b-3">Buttons</h3>
+                <p class="m-b-6">
+                    Below are examples of primary and secondary buttons used in the FeedCrumbs website. Primary buttons
+                    are used for main actions, while secondary buttons are for less prominent actions.
+                </p>
+                <div class="button-examples m-b-6">
+                    <button class="button button-primary m-r-4">Primary Button</button>
+                    <button class="button button-secondary">Secondary Button</button>
+                </div>
+
+                <div class="button-examples m-b-6">
+                    <button disabled class="button button-primary m-r-4">Primary Button</button>
+                    <button disabled class="button button-secondary">Secondary Button</button>
+                </div>
+                <p>The buttons are designed to be easily identifiable and accessible, with clear labels and sufficient
+                    contrast against their backgrounds.</p>
+
+
+            </section>
+
             <article class="form-section m-b-12">
-                <h2 class="m-b-6">Community Engagement Form</h2>
+                <h3 class="m-b-6">Community Engagement Form</h3>
                 <p class="m-b-6">
                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam perferendis, voluptas optio velit
                     facilis modi quo, fuga corporis recusandae, expedita officiis. Cupiditate laborum delectus quia
