feat: annotation for link

--- a/work_phase_3/behavioural_design.html
+++ b/work_phase_3/behavioural_design.html
@@ -47,16 +47,17 @@
                     This is the Behavioral design aspect of the FeedCrumbs website
                 </h3>
                 <p class="m-b-8">
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic enim corrupti laboriosam? Id temporibus
-                    quisquam dolorem quod accusamus quasi voluptates!
+                    This page will showcase several examples of high fidelity components used in the FeedCrumbs website,
+                    a
+                    working button set, and a sample form designed for community engagement.
                 </p>
             </header>
 
             <section class="base-card m-b-12">
                 <h3 class="m-b-6">Wireframe Gallery</h3>
                 <p class="m-b-8">
-                    Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sed cupiditate doloremque minima nam
-                    expedita ab alias quasi voluptate animi accusamus?
+                    Below are several high fidelity components designed for the FeedCrumbs website, including links,
+                    menus/navigation, cards, and icons.
                     <br>
                     <br>
 
@@ -67,7 +68,7 @@
                 <div class="image-gallery">
                     <div class="gallery-item">
                         <img src="../work_phase_3/assets/links.png" alt="
-                        As planned on the sitemap, this part of screen is consisting of 3 main features, landing page, highlights, and about. Firstly, in the landing page, I used the Gestalt Principles, Law of Prägnanz. I use simple texts with buttons, basic shapes, and a simple background. To make sure I adhere to contrast minimum (WCAG 1.4.3), I do not plan on using an image for the background. I intend to use a minimum decorations to fill the white space in the landing page. This too also following the Gestalt principle of Figure and Ground, which is to make sure the main contents stand out to the background. Moving on to next section which is the highlight, I actually put it very near to to the landing page, so that the user can see the highlight from the first time when opening the page, making it easier and hopefully acts as a hook for the user. In order to make sure its not cluttered, i apply the Gestalt Principles of Common Regions. I boxed in the highlight section using border so that the separation of the contents clearer. Lastly, the about page is provided near the bottom of the page. Identical to the other sections, because there is images in this part, I will make sure to apply alt text in order to adhere WCAG 1.1.1 (alt text for non-text content). Overall, I also apply Gestalt Principles of Proximity, and Gestalt Principles of Similarity by using consistent spacing between things that are connected and non-connected, and consistent designs such for buttons, text, and colors (later on design implementation). Mobile specific: Some of the components layouts are changed (for example row become columns), in order to maintain consistent spacings and prevent cluttering. 
+                        Several principles are considered while creating this Link. First, since potential users want an easy way to navigate throughout the website, adhering to Link Purpose WCAG 2.4.4, which is to give descriptive names or context in the link. For example, on this link example, a label of Home page and icon of “Home” is used in order to improve Discoverability for the users. To give users a sense of “feedback”, the design is also made with some interaction states (hover and focus). As the image shows, the button will have outline/border when it is on active mode, while on hover mode, a slight background color and underline is made.  
 
                         " class="responsive-img">
                         <h4 class="m-t-3">Links</h4>
