feat: add cards annotations

--- a/work_phase_3/behavioural_design.html
+++ b/work_phase_3/behavioural_design.html
@@ -67,24 +67,25 @@
 
                 <div class="image-gallery">
                     <div class="gallery-item">
-                        <img src="../work_phase_3/assets/links.png" alt="
-                        Several principles are considered while creating this Link. First, since potential users want an easy way to navigate throughout the website, adhering to Link Purpose WCAG 2.4.4, which is to give descriptive names or context in the link. For example, on this link example, a label of Home page and icon of “Home” is used in order to improve Discoverability for the users. To give users a sense of “feedback”, the design is also made with some interaction states (hover and focus). As the image shows, the button will have outline/border when it is on active mode, while on hover mode, a slight background color and underline is made.  
-
-                        " class="responsive-img">
+                        <img src="../work_phase_3/assets/links.png"
+                            alt="
+                        Several principles are considered while creating this Link. First, since potential users want an easy way to navigate throughout the website, adhering to Link Purpose WCAG 2.4.4, which is to give descriptive names or context in the link. For example, on this link example, a label of Home page and icon of “Home” is used in order to improve Discoverability for the users. To give users a sense of “feedback”, the design is also made with some interaction states (hover and focus). As the image shows, the button will have outline/border when it is on active mode, while on hover mode, a slight background color and underline is made. The link created is inspired by this: https://www.figma.com/community/file/1238394528745655179"
+                            class="responsive-img">
                         <h4 class="m-t-3">Links</h4>
                     </div>
 
                     <div class="gallery-item">
-                        <img src="../work_phase_3/assets/navbar.png"
-                            alt="
-                        On creating the Menus/Navigation, we pay extra attention to two accessibility principles, consistent navigation (3.2.3) and meaningful sequence (1.3.2). In order to make it easier for users to “remember” and navigate throughout the webpages, the links inside the navigation bar is structured and placefully consistent throughout the pages. Also, creating a logical sequence based on the mind map is implemented, in order to make the navigation pathway is “make sense”, for example heavily connected features such as FeedCrumbs, Crumblings, and CrumbsMap is near, while OZVents, a sub feature of Communities is created in a “child” navigation, which can be opened and closed. Furthermore, similar to links, interactive design states are implemented, such as hover state, focused state and active state."
+                        <img src="../work_phase_3/assets/navbar.png" alt="
+                        On creating the Menus/Navigation, we pay extra attention to two accessibility principles, consistent navigation (3.2.3) and meaningful sequence (1.3.2). In order to make it easier for users to “remember” and navigate throughout the webpages, the links inside the navigation bar is structured and placefully consistent throughout the pages. Also, creating a logical sequence based on the mind map is implemented, in order to make the navigation pathway is “make sense”, for example heavily connected features such as FeedCrumbs, Crumblings, and CrumbsMap is near, while OZVents, a sub feature of Communities is created in a “child” navigation, which can be opened and closed. Furthermore, similar to links, interactive design states are implemented, such as hover state, focused state and active state.
+Navigation created is inspired by this: https://www.figma.com/community/file/1238394528745655179"
                             class="responsive-img">
                         <h4 class="m-t-3">Menus/Navigation</h4>
                     </div>
 
                     <div class="gallery-item">
                         <img src="../work_phase_3/assets/cards.png"
-                            alt="Due to the complexity the timeline (FeedCrumbs) page, I really make sure to pay attention to Gestalt Principles of Common Regions. The overall layout created is boxed using borders to create “zones”, in order to make sure the user can easily navigate and interact with the elements in the page. Furthemore, Gestalt Principles of Common Regions is also used to make sure the navigation placement is consistent throughout different pages, both on desktop and mobile, in order to make it more easy and “easy to remember” to be navigated by the users, Since this page is text and content heavy, several accessibility principles are implemented in this page. The most obvious one is Contrast Minimum and Resize text, this accessibility considerations is very important because the page is very wordy, therefore we have to make the user can easily read the texts, and also the page is not cluttered in case a bigger texts is needed for visually impaired users. Form and input related accessibility considerations such as Error Identification, Focus Visible, and Label & Instructions is also needed in this page, since there are several textbox and inputs in this page. This accessibility consideration is important to make sure user can easily interact with the forms and input, such as adding labels in the forms, and also error message if theres a misuse in the text box (such as message too long)."
+                            alt="
+On creating the Card component, the WCAG principles of Meaningful Sequence is implemented, in order to logically order the grouped information inside each cards, therefore people who rely on assistive tech can logically infer the contents by listening it out loud without read the contents. The cards created is also has consistent layout with other cards. Furthermore, a clear click target is created to make sure users can easily knows what is clickable and not. To maintain behavioral usability, examples of feedback states which are hover state (extra shadow) and focus state (extra border) is also implemented in the image. Cards created inspired from this: https://www.figma.com/community/file/1038262182101233833 "
                             class="responsive-img">
                         <h4 class="m-t-3">Cards</h4>
                     </div>
