feat: button annotations

--- a/work_phase_3/behavioural_design.html
+++ b/work_phase_3/behavioural_design.html
@@ -102,20 +102,23 @@ On creating the Card component, the WCAG principles of Meaningful Sequence is im
             <section class="base-card m-b-12">
                 <h3 class="m-b-3">Buttons</h3>
                 <p class="m-b-6">
-                    Below are examples of primary and secondary buttons used in the FeedCrumbs website. Primary buttons
-                    are used for main actions, while secondary buttons are for less prominent actions.
+                    In order to create clear actions and feedback, we create buttons that support various use case. In
+                    this example, we have created 4 different buttons, with different labels that describe what the
+                    button used for. To improve the behavioral feedback, several states are also implemented, such as
+                    active, disabled, focused, and hovered.
                 </p>
                 <div class="button-examples m-b-6">
-                    <button class="button button-primary m-r-4">Primary Button</button>
-                    <button class="button button-secondary">Secondary Button</button>
+                    <button class="button button-primary m-r-4">Join Us</button>
+                    <button class="button button-secondary">Explore FeedCrumbs</button>
                 </div>
 
                 <div class="button-examples m-b-6">
-                    <button disabled class="button button-primary m-r-4">Primary Button</button>
-                    <button disabled class="button button-secondary">Secondary Button</button>
+                    <button disabled class="button button-primary m-r-4">Submit Form</button>
+                    <button disabled class="button button-secondary">Clear Form</button>
                 </div>
-                <p>The buttons are designed to be easily identifiable and accessible, with clear labels and sufficient
-                    contrast against their backgrounds.</p>
+                <p>In order to convey informations more clearly, we implement the principle Use of Color (WCAG 1.4.1).
+                    For example, call to actions colors will use the main colors, while disabled buttons will be grayed
+                    out. </p>
 
 
             </section>
